[tool.poetry]
name = "terra-proto"
authors = ["Terraform Labs, PTE. <engineering@terra.money>"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
description = "The Python Protobuf implementation for Terra"
homepage = "https://github.com/terra-money/terra.proto"
keywords = ["jigu", "blockchain", "terra", "defi", "crypto"]
license = "MIT"
packages = [{ include = "terra_proto" }]
readme = "README.md"
repository = "https://github.com/terra-money/terra.proto"
version = "2.1.0"

[tool.poetry.dependencies]
python = "^3.7"
betterproto = "2.0.0b4"
MarkupSafe = "2.0.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = "^5.3.1"
flake8 = "^3.8.4"
isort = "^5.7.0"
mypy = "^0.800"
pip = "^21.0"
pytest = "^6.2.1"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
pytest-runner = "^5.2"
pytest-sugar = "^0.9.4"
watchdog = "^1.0.2"
wheel = "^0.36.2"
Sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.1"
sphinx-autodoc-typehints = "^1.11.1"
sphinx-autobuild = "^2020.9.1"
uvloop = "^0.14.0"
attrs = "20.3.0"

[tool.pytest.ini_options]
addopts = "-ra -q"
minversion = "6.0"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
