[package]
name = "terra-proto"
version = "0.5.12-beta.0"
authors = ["TerraformLabs"]
edition = "2018"
description = "Terra Core Protobuf Builds"
license = "Apache-2.0"
repository = "https://github.com/terra-money/terra.proto.git"
homepage = "https://terra.money"
documentation = "https://docs.terra.money"

[dependencies]
prost = "0.9"
prost-types = "0.9"

[build-dependencies]
prost-build = "0.9"
walkdir = { version = "2.3.2"}
